DigicielFull/force-app/main/default/objects/User/fields/Access_Shut_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Shut_Off_Date__c</fullName>
    <inlineHelpText>This field is mandatory for all Contractors and External users. Once the date expires, the user will be automatically deactivated</inlineHelpText>
    <label>Access Shut Off Date</label>
    <type>Date</type>
</CustomField>