DigicielFull/force-app/main/default/objects/User/fields/Business_Entitiy__c.field-meta.xml
<CustomField>
    <fullName>Business_Entitiy__c</fullName>
    <label>Business Entitiy</label>
    <length>40</length>
    <type>Text</type>
</CustomField>