DigicielFull/force-app/main/default/objects/User/fields/DailyMeetingsTarget__c.field-meta.xml
<CustomField>
    <fullName>DailyMeetingsTarget__c</fullName>
    <label>Daily Meetings Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>