DigicielFull/force-app/main/default/objects/User/fields/Department_Type__c.field-meta.xml
<CustomField>
    <fullName>Department_Type__c</fullName>
    <label>Department Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICT</fullName>
            </value>
            <value>
                <fullName>GSM</fullName>
            </value>
            <value>
                <fullName>ICT &amp; GSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>