DigicielFull/force-app/main/default/objects/User/fields/Digicel_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Digicel_Company_Name__c</fullName>
    <description>This field is used for reporting on which company a user works for. This will include contractor companies &amp; vendors who are granted access to the system.

This field will be mandatory upon user creation.</description>
    <label>Digicel Company Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digicel Business</fullName>
            </value>
            <value>
                <fullName>Trend Media</fullName>
            </value>
            <value>
                <fullName>IDOM Technologies</fullName>
            </value>
            <value>
                <fullName>Digicel International Business LTD</fullName>
            </value>
            <value>
                <fullName>ChannelPro LTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>