DigicielFull/force-app/main/default/objects/User/fields/Digicel_Company_Role__c.field-meta.xml
<CustomField>
    <fullName>Digicel_Company_Role__c</fullName>
    <businessOwnerGroup>SFDC_Admin_Team</businessOwnerGroup>
    <description>This field is used to categorize user groups so that we can report on # of sales people etc. This field will be mandatory upon user creation</description>
    <label>Digicel Company Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>CCO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>C-Level</fullName>
            </value>
            <value>
                <fullName>Corporate Care</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Head of Department</fullName>
            </value>
            <value>
                <fullName>Head of Sales</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product Manager</fullName>
            </value>
            <value>
                <fullName>Revenue Assurance</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Sales Person</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>Service Delivery</fullName>
            </value>
            <value>
                <fullName>ICT Technical team</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>Tech Support</fullName>
            </value>
            <value>
                <fullName>Top-up Support</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Auditor (External)</fullName>
            </value>
            <value>
                <fullName>Bid Manager</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Group IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>