DigicielFull/force-app/main/default/objects/User/fields/Digicel_Country__c.field-meta.xml
<CustomField>
    <fullName>Digicel_Country__c</fullName>
    <description>*****************************************DO NOT MODIFY THIS FIELD*****************************************

This field is used to report on users and what market they are assigned to. Workflow Rules, Approval Processes and other customization&apos;s rely on this field. Changing any of this field&apos;s attributes will cause adverse reactions in the system. 

*****************************************DO NOT MODIFY THIS FIELD*****************************************</description>
    <label>Digicel Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anguilla</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Bermuda</fullName>
            </value>
            <value>
                <fullName>Bonaire</fullName>
            </value>
            <value>
                <fullName>BVI</fullName>
            </value>
            <value>
                <fullName>Cayman Islands</fullName>
            </value>
            <value>
                <fullName>Curacao</fullName>
            </value>
            <value>
                <fullName>Dominica</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>FWI</fullName>
            </value>
            <value>
                <fullName>Grenada</fullName>
            </value>
            <value>
                <fullName>Guyana</fullName>
            </value>
            <value>
                <fullName>Haiti</fullName>
            </value>
            <value>
                <fullName>Jamaica</fullName>
            </value>
            <value>
                <fullName>Panama</fullName>
            </value>
            <value>
                <fullName>Saint Kitts and Nevis</fullName>
            </value>
            <value>
                <fullName>Saint Lucia</fullName>
            </value>
            <value>
                <fullName>Saint Vincent and the Grenadines</fullName>
            </value>
            <value>
                <fullName>Suriname</fullName>
            </value>
            <value>
                <fullName>Trinidad and Tobago</fullName>
            </value>
            <value>
                <fullName>Turks and Caicos Islands</fullName>
            </value>
            <value>
                <fullName>Fiji</fullName>
            </value>
            <value>
                <fullName>Nauru</fullName>
            </value>
            <value>
                <fullName>PNG</fullName>
            </value>
            <value>
                <fullName>Samoa</fullName>
            </value>
            <value>
                <fullName>Tonga</fullName>
            </value>
            <value>
                <fullName>Vanuatu</fullName>
            </value>
            <value>
                <fullName>Group Business Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>