DigicielFull/force-app/main/default/objects/User/fields/Employee_on_PIP__c.field-meta.xml
<CustomField>
    <fullName>Employee_on_PIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee on PIP</label>
    <type>Checkbox</type>
</CustomField>