DigicielFull/force-app/main/default/objects/User/fields/GSM_Monthly_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>GSM_Monthly_Revenue_Target__c</fullName>
    <label>GSM Monthly Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>