DigicielFull/force-app/main/default/objects/User/fields/GSM_Quarterly_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>GSM_Quarterly_Revenue_Target__c</fullName>
    <formula>GSM_Monthly_Revenue_Target__c * 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSM Quarterly Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>