DigicielFull/force-app/main/default/objects/User/fields/Monthly_OTC_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_OTC_Target__c</fullName>
    <label>Monthly OTC Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>