DigicielFull/force-app/main/default/objects/User/fields/MRR_GSM_Re_contracting_Target__c.field-meta.xml
<CustomField>
    <fullName>MRR_GSM_Re_contracting_Target__c</fullName>
    <label>Mobile Service Re-contracting MRR Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>