DigicielFull/force-app/main/default/objects/User/fields/MRR_GSM_Target__c.field-meta.xml
<CustomField>
    <fullName>MRR_GSM_Target__c</fullName>
    <label>Mobile Service MRR Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>