DigicielFull/force-app/main/default/objects/User/fields/Next_Month_ICT_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_ICT_Monthly_Revenue__c</fullName>
    <label>Next Month ICT Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>