DigicielFull/force-app/main/default/objects/User/fields/Next_Month_Monthly_OTC_Target__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Monthly_OTC_Target__c</fullName>
    <label>Next Month Monthly OTC Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>