DigicielFull/force-app/main/default/objects/User/fields/Next_Month_Weekly_OTC_Target__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Weekly_OTC_Target__c</fullName>
    <label>Next Month Weekly OTC Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>