DigicielFull/force-app/main/default/objects/User/fields/of_Times_Activated__c.field-meta.xml
<CustomField>
    <fullName>of_Times_Activated__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Counts how many times the &quot;Date Activated&quot; field has been changed.

Only counts past 01/10/2020</inlineHelpText>
    <label># of Times Activated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>