DigicielFull/force-app/main/default/objects/User/fields/of_Times_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>of_Times_Deactivated__c</fullName>
    <defaultValue>0</defaultValue>
    <label># of Times Deactivated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>