DigicielFull/force-app/main/default/objects/User/fields/of_Users__c.field-meta.xml
<CustomField>
    <fullName>of_Users__c</fullName>
    <description>The &quot;Power of One&quot; field is used to ensure that a count of this specific object can be shown in a report.  https://success.salesforce.com/0D53000001GwrJW</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>