DigicielFull/force-app/main/default/objects/User/fields/OTC_ICT_Margin_Target__c.field-meta.xml
<CustomField>
    <fullName>OTC_ICT_Margin_Target__c</fullName>
    <label>ICT Equipment OTC Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>