DigicielFull/force-app/main/default/objects/User/fields/Postpaid_Mth_Target__c.field-meta.xml
<CustomField>
    <fullName>Postpaid_Mth_Target__c</fullName>
    <label>Postpaid Monthly Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>