DigicielFull/force-app/main/default/objects/User/fields/Postpaid_QTR_Target__c.field-meta.xml
<CustomField>
    <fullName>Postpaid_QTR_Target__c</fullName>
    <formula>Postpaid_Mth_Target__c * 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postpaid QTR Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>