DigicielFull/force-app/main/default/objects/User/fields/Previous_Month_Weekly_ICT_Target__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Weekly_ICT_Target__c</fullName>
    <formula>Previous_Month_ICT_Monthly_Revenue__c / 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Month Weekly ICT Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>