DigicielFull/force-app/main/default/objects/User/fields/Previous_Month_Weekly_OTC_Target__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Weekly_OTC_Target__c</fullName>
    <label>Previous Month Weekly OTC Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>