DigicielFull/force-app/main/default/objects/User/fields/Quarter_Meeting_Target__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Meeting_Target__c</fullName>
    <formula>Mth_Meeting_Target__c * 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter Meeting Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>