DigicielFull/force-app/main/default/objects/User/fields/QuotaCarryingSalesPerson__c.field-meta.xml
<CustomField>
    <fullName>QuotaCarryingSalesPerson__c</fullName>
    <label>Quota Carrying Sales Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>