DigicielFull/force-app/main/default/objects/User/fields/Reporting_Hierarchy_2__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Hierarchy_2__c</fullName>
    <formula>BLANKVALUE(Manager.Manager.Manager.FirstName &amp;&quot; &quot;&amp; Manager.Manager.Manager.LastName, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Hierarchy 2</label>
    <type>Text</type>
</CustomField>