DigicielFull/force-app/main/default/objects/User/fields/SFDCLicencePaid__c.field-meta.xml
<CustomField>
    <fullName>SFDCLicencePaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFDC Licence (Paid)</label>
    <type>Checkbox</type>
</CustomField>