DigicielFull/force-app/main/default/objects/User/fields/UAT_user__c.field-meta.xml
<CustomField>
    <fullName>UAT_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UAT User</label>
    <type>Checkbox</type>
</CustomField>