DigicielFull/force-app/main/default/objects/User/fields/User_Principal_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Principal_Name__c</fullName>
    <label>User Principal Name</label>
    <type>Email</type>
</CustomField>