DigicielFull/force-app/main/default/objects/User/fields/Vacation_Status__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Status__c</fullName>
    <label>Vacation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Vacation</fullName>
            </value>
            <value>
                <fullName>Not On Vacation</fullName>
                <default>true</default>
                <label>Not On Vacation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>