DigicielFull/force-app/main/default/objects/User/fields/Weekly_Recurring_Target__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Recurring_Target__c</fullName>
    <label>Weekly Recurring Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>