DigicielFull/force-app/main/default/objects/User/fields/WeeklyMeetings__c.field-meta.xml
<CustomField>
    <fullName>WeeklyMeetings__c</fullName>
    <label>Weekly Meetings Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>