DigicielFull/force-app/main/default/objects/User/fields/X4G_Monthly_Target__c.field-meta.xml
<CustomField>
    <fullName>X4G_Monthly_Target__c</fullName>
    <label>4G Monthly Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>