DigicielFull/force-app/main/default/objects/User/fields/X4G_Monthly_Target_for_QTR__c.field-meta.xml
<CustomField>
    <fullName>X4G_Monthly_Target_for_QTR__c</fullName>
    <formula>X4G_Monthly_Target__c * 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4G Monthly Target for QTR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>