DigicielFull/force-app/main/default/objects/User/validationRules/Only_SFDC_Admin_Can_Create_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_SFDC_Admin_Can_Create_Users</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISNEW(),
Profile.UserLicense.Name = &quot;Salesforce&quot;)

&amp;&amp;  Id  &lt;&gt;&quot;005d0000005tr0U&quot;
&amp;&amp;  Id  &lt;&gt;&quot;0050W0000072UWZ&quot;
&amp;&amp;  Id  &lt;&gt;&quot;0050W0000072Zpq&quot;
&amp;&amp;  Id  &lt;&gt;&quot;005d0000002PTgQ&quot;</errorConditionFormula>
    <errorMessage>All user access requests need to be logged via a Case in Salesorce. This allows the operations team to track all approvals associated with the access request.

Users created without a supporting case will be deactivated</errorMessage>
</ValidationRule>