DigicielFull/force-app/main/default/objects/User/listViews/All_Active_Users.listView-meta.xml
<ListView>
    <fullName>All_Active_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CREATED_DATE</columns>
    <columns>User_Id__c</columns>
    <columns>Digicel_Company_Name__c</columns>
    <columns>Digicel_Country__c</columns>
    <columns>Digicel_Business_Unit__c</columns>
    <columns>Digicel_Company_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>!All Active Users</label>
    <language>en_US</language>
</ListView>