DigicielFull/force-app/main/default/objects/User/listViews/All_Inactive_Users.listView-meta.xml
<ListView>
    <fullName>All_Inactive_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>Digicel_Country__c</columns>
    <columns>MANAGER</columns>
    <columns>User_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive Users</label>
    <language>en_US</language>
    <sharedTo>
        <role>Chairman_s_Committee</role>
    </sharedTo>
</ListView>