DigicielFull/force-app/main/default/objects/User/listViews/SP_Users.listView-meta.xml
<ListView>
    <fullName>SP_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>Digicel_Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>User_Id__c</columns>
    <columns>Manager_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Digicel_Country__c</field>
        <operation>equals</operation>
        <value>Fiji,Nauru,PNG,Samoa,Tonga,Vanuatu</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SP Users</label>
    <language>en_US</language>
</ListView>